Use_warning_fragment  - Now using the warning fragment instead of toast everywhere except on the add and edit job fragments... makes more sense to use toast there

--- a/Resources/layout/AlertBoxFragment.axml
+++ b/Resources/layout/AlertBoxFragment.axml
@@ -10,7 +10,7 @@
     android:layout_height="wrap_content"
     android:layout_width="0dp"
     android:layout_weight="9"
-    android:padding="@dimen/alert_box_padding"
+    android:layout_margin="@dimen/alert_box_padding"
     android:background="@color/white"
     android:textSize="15sp"
     android:textColor="@color/black"
