--- a/Resources/layout/JobList.axml
+++ b/Resources/layout/JobList.axml
@@ -27,4 +27,9 @@
       android:layout_gravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
+  <fragment
+    android:name="lawnmower.AlertBoxActivity"
+    android:id="@+id/AlertBoxFragment"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/alert_box_height"/>
 </FrameLayout>
