--- a/Resources/layout/JobListAdmin.axml
+++ b/Resources/layout/JobListAdmin.axml
@@ -8,11 +8,16 @@
       android:layout_height="match_parent">
       <include
           layout="@layout/ToolbarAdmin" />
-      <ListView
-          android:id="@+id/JobList"
-          android:layout_height="match_parent"
+      <android.support.v4.widget.SwipeRefreshLayout
+          android:id="@+id/SwipeRefresh"
           android:layout_width="match_parent"
-          android:background="@color/bedazzled_blue" />
+          android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/JobList"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:background="@color/bedazzled_blue" />
+      </android.support.v4.widget.SwipeRefreshLayout>
   </LinearLayout>
   
   <fragment
